--- a/public/css/main.css
+++ b/public/css/main.css
@@ -15,3 +15,35 @@
     margin-left: 80px;
 }
 
+.form__login {
+    width: 350px !important;
+    margin-top: 80px;
+}
+
+.form__login .login-tab ul {
+    border-bottom: 1px solid #000;
+    width: 200px;
+}
+
+.form__tab {
+    margin-bottom: 10px;
+}
+
+.form__login .form__tab-item .form_tab-item-active {
+    border-bottom: 3px solid #000;
+}
+
+.form__login #text-codition {
+    font-size: 12px;
+    font-weight: 400;
+}
+
+.form__login #form-check-text {
+    font-size: 13px;
+    font-weight: 400;
+}
+
+.form__login .form__login-btn {
+    width: 300px;
+    border-radius: 50px;
+} 
