--- a/public/css/main.css
+++ b/public/css/main.css
@@ -71,8 +71,7 @@ footer .logo {
 } 
 
 .form__login #form__login-forget {
-    padding-top: 20px;
-    border-bottom: 1px solid #000;
+    padding: 20px 0;
 }
 
 .form__login #form__login-btn-create {
