done product detail

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -77,3 +77,11 @@ footer .logo {
 a {
     color: black;
 }
+
+/* PRODUCT DETAIL */
+.nut {
+    width: 100%;
+}
+.nut button {
+    width: 90px;
+}
